themes/Adwaita/gtk-3.0/gtk-widgets.css
/* ... */
.progressbar:backdrop,
.progressbar row:backdrop,
.progressbar row:selected:backdrop,
.progressbar.vertical:backdrop,
.progressbar.vertical row:backdrop,
.progressbar.vertical row:selected:backdrop {
    -adwaita-progressbar-pattern: none;
    background-image: none;
    background-color: @progressbar_unfocused_background;
    border-color: @progressbar_unfocused_border;
    box-shadow: none;
}

/* for progressbars in cell renderers */
.trough row {
    padding: 0;
}

.trough row:selected,
.trough row:selected:focus {
    background-image: -gtk-gradient (linear,
                                     left top, left bottom,
                                     from (mix (@trough_bg_color_a, @theme_selected_bg_color, 0.25)),
                                     to (mix (@trough_bg_color_b, @theme_selected_bg_color, 0.25)));
}

GtkProgressBar:backdrop,
GtkProgressBar.vertical:backdrop,
.trough row:backdrop,
.trough.vertical row:backdrop {
    background-image: none;
    background-color: @unfocused_dark_bg;
}

/************
 * GtkScale *
 ************/
GtkScale {
    -GtkScale-slider-length: 16;
    -GtkRange-slider-width: 20;
    -GtkRange-trough-border: 0;
}

GtkScale.slider,
GtkScale.slider:hover,
GtkScale.slider:insensitive,
GtkScale.slider:backdrop,
GtkScale.slider:insensitive:backdrop {
    border-radius: 0;
    border-style: none;

    color: alpha(@theme_base_color, 0.0); /* FIXME */
    background-color: transparent;

    /* background-image in -assets variant */
}

GtkScale.trough,
GtkScale.trough.highlight,
GtkScale.trough.vertical,
GtkScale.trough:backdrop {
    border-width: 1px;
    border-image: none;
    border-style: solid;
}

GtkScale.trough,
GtkScale.trough.highlight,
GtkScale.trough.vertical {
    border-color: @borders;
}

GtkScale.trough:backdrop {
    border-color: @unfocused_borders;
}

GtkScale.trough:insensitive {
    background-color: @insensitive_bg_color;
    border-color: @insensitive_borders;
    box-shadow: none;
    background-image: none;
}

GtkScale.progressbar {
    background-color: @scale_progress_fill;

    -adwaita-progressbar-pattern: none;
}

GtkScale.progressbar:backdrop {
    background-color: @unfocused_borders;

    -adwaita-progressbar-pattern: none;
}

GtkScale.mark {
    color: alpha(@theme_fg_color, 0.3);
}

GtkScale.trough.vertical {
    box-shadow: inset -1px 0 @theme_bg_color;
}

GtkScale.trough {
    box-shadow: inset 0 -1px @theme_bg_color;
}

GtkScale.trough:backdrop {
    box-shadow: none;
    border-color: @unfocused_borders;
    background-color: @unfocused_dark_bg;
    background-image: none;
}

GtkScale.trough:insensitive:backdrop {
    background-color: @unfocused_insensitive_bg_color;
    border-color: @unfocused_insensitive_borders;
    box-shadow: none;
    background-image: none;
}

/**********
 * Frames *
 **********/
.frame {
    border-width: 1px;
    border-color: @borders;
    border-style: solid;
    background-color: @theme_base_color;
    padding: 0;
}

.frame:backdrop {
    border-color: @unfocused_borders;
}

GtkScrolledWindow.frame {
    border-style: solid;
    border-color: @borders;
    border-width: 1px;
    border-radius: 2px;
    padding: 0;
}

GtkScrolledWindow.frame:backdrop {
    border-color: @unfocused_borders;
}

/***********
 * Buttons *
 ***********/
.button,
.button.menuitem.menubar,
GtkComboBox.combobox-entry .button {
    padding: 1px 4px;
}

.button {
    -GtkButton-image-spacing: 4;
    -GtkButton-interior-focus: true;
    -GtkButton-default-border: 0;
    -GtkButton-inner-boder: 3;

    color: @theme_text_color;

    border-style: solid;
    border-color: transparent;

    text-shadow: 0 1px @button_text_shadow;
}

/* We may want a background for focused buttons, but in the meantime let's remove it too */
.primary-toolbar .button,
.primary-toolbar .button:insensitive,
.primary-toolbar .button:backdrop,
.primary-toolbar .button:hover:backdrop,
.primary-toolbar .button:insensitive:backdrop {
    background-image: none;
    background-color: transparent;
}

/* Remove borders from primary toolbar buttons*/
.primary-toolbar .button {
    border-image: none;

    /* setting border-style: none; here would override the border-width values 
     * we set in gtk-widget-borders.css to zero.
     */
    border-style: solid;
    border-width: 2px;
    border-color: transparent;

    text-shadow: 0 1px @primary_toolbar_button_text_shadow;
}

.primary-toolbar .button *:active,
.inline-toolbar .button *:active,
.button *:active {
    color: @button_active_text;
    text-shadow: 0 1px @button_active_text_shadow;
}

.button *:insensitive,
.button *:active:insensitive {
    color: @insensitive_fg_color;
    text-shadow: none;
}

.button *:insensitive:backdrop {
    color: @unfocused_insensitive_fg_color;
}

.button *:active:backdrop,
.button *:active:insensitive:backdrop {
    color: @theme_unfocused_bg_color;
    text-shadow: none;
    icon-shadow: none;
}

.toolbar .button.raised *,
.toolbar .raised .button *,
.inline-toolbar .button * {
    icon-shadow: 0 1px @button_text_shadow;
    text-shadow: 0 1px @button_text_shadow;
}

.toolbar .button.raised *:active,
.toolbar .raised .button *:active,
.inline-toolbar .button *:active {
    icon-shadow: 0 1px @button_active_text_shadow;
    text-shadow: 0 1px @button_active_text_shadow;
}

.toolbar .button.raised *:insensitive,
.toolbar .raised .button *:insensitive,
.inline-toolbar .button *:insensitive {
    icon-shadow: none;
    text-shadow: none;
}

.toolbar .button.raised *:backdrop,
.toolbar .raised .button *:backdrop,
.inline-toolbar .button *:backdrop {
    text-shadow: none;
    icon-shadow: none;
}

/* linked buttons */

/* Set up shadows and hilights for button visual separation */
.linked .button,
.toolbar .button.raised.linked,
.toolbar .raised.linked .button,
.inline-toolbar.toolbar .button,
.inline-toolbar.toolbar GtkToolButton .button {
    box-shadow: inset 1px 0 @inset_light_color, inset -1px 0 @inset_dark_color;
}
/* ... */

